--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body>
     <form action="#">
-        
+        <div class="input-box animation" style="--1:1; --j:22">
+            <input type="text" name="" id="" required>
+
+        </div>
     </form>
 </body>
 </html>
